# great-docs

./: .gitignore  .ruffignore  CITATION.cff  Makefile  README.md  ROADMAP.md  _test_google_returns.py  code-of-conduct.html  contributing.html  great-docs.yml  index.html  index.qmd  license.html  pyproject.toml  search.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: docs.yml  test.yml
assets/color-data/: demo-brand.yml  demo-contrast.yml  demo-extend-accent.yml  demo-minimal.yml  demo-quick-start.yml  demo-rectangles.yml  demo-single.yml  demo-title.yml
assets/data/: employees.csv  employees.feather  products.parquet  products.tsv  server_logs.jsonl  students.csv
docs/: .gitignore  _quarto.yml  _source_links.json  dark-mode-toggle.js  great-docs.css  index.qmd  llms.txt  theme-init.js
docs/scripts/: post-render.py
examples/: README.md  _quarto_example.yml
great_docs/: __init__.py  _api_diff.py  _build_log.py  _directives.py  _license.py  _lint.py  _tbl_display.py  _tbl_explorer.py  _tbl_preview.py  _translations.py  _versioned_build.py  _versioning.py  cli.py  config.py  contrast.py  core.py  directives.py
great_docs/_qrenderer/: __init__.py  _ast.py  _base_utils.py  _format.py  _md_renderer.py  _node.py  _renderer.py  _rst_converters.py  _tools.py  _utils.py  blueprint.py  collect.py  introspection.py  inventory.py  layout.py  typing.py  typing_information.py
great_docs/_qrenderer/_griffe/: __init__.py  docstrings.py
great_docs/_qrenderer/_pandoc/: blocks.py  inlines.py
great_docs/_qrenderer/_render/: __init__.py  _label.py  api_page.py  base.py  doc.py  docattribute.py  docclass.py  docfunction.py  docmodule.py  extending.py  link.py  mixin_call.py  mixin_members.py  mixin_page.py  reference_page.py  reference_section.py
great_docs/_qrenderer/pandoc/: blocks.py  components.py  inlines.py
great_docs/_renderer/: __init__.py  _ast.py  _format.py  _rst_converters.py  _tools.py  _transformers.py  blueprint.py  introspection.py  inventory.py  layout.py  renderer.py  typing.py  typing_information.py
great_docs/_renderer/_griffe/: __init__.py  docstrings.py  enumerations.py
great_docs/_renderer/_render/: __init__.py  _label.py  api_page.py  base.py  doc.py  docattribute.py  docclass.py  docfunction.py  extending.py  html_table.py  mixin_call.py  mixin_members.py  mixin_page.py  reference_page.py  reference_section.py
great_docs/_renderer/pandoc/: __init__.py  blocks.py  inlines.py
great_docs/assets/: .gitignore  _renderer.py  announcement-banner.js  content-style.js  copy-page.js  dark-mode-toggle.js  github-widget.js  github-workflow-template.yml  great-docs-q.scss  great-docs.css  great-docs.scss  keyboard-nav.js  navbar-style.js  navbar-widgets.js  page-metadata.js  page-status-badges.js  page-tags.js  post-render.py  reference-switcher.js  responsive-tables.js  sidebar-filter.js  sidebar-wrap.js  starfield.js  styles.css  tbl-explorer.js  theme-init.js  tooltips.js  version-selector.js  video-embed.js
great_docs/renderer/: __init__.py  _format.py  _renderer.py  _tools.py  _utils.py  typing.py
great_docs/renderer/_griffe/: __init__.py
great_docs/renderer/_render/: __init__.py  api_page.py  base.py  doc.py  docattribute.py  docclass.py  docfunction.py  link.py  mixin_call.py  mixin_members.py  (+1 more)
great_theme/: __init__.py  cli.py  core.py
great_theme/assets/: post-render.py  styles.css
recipes/: 01-hide-internal-symbols.qmd  02-customize-api-organization.qmd  03-document-a-cli.qmd  04-cross-reference-items.qmd  05-add-custom-css.qmd  05-cross-reference-items.qmd  06-choose-gradient-theme.qmd  07-add-logo-favicon.qmd  08-customize-announcement-banner.qmd  09-write-effective-docstrings.qmd  10-add-images-diagrams.qmd  11-create-changelog.qmd  12-github-pages-ci.qmd  13-add-custom-domain.qmd  14-install-great-docs-skill.qmd  15-build-site-with-llm.qmd  16-customize-site-with-llm.qmd  17-understand-llms-txt.qmd  18-fix-common-build-errors.qmd  19-proofread-documentation.qmd  20-embed-videos.qmd  21-enable-multi-version-docs.qmd  22-use-version-fences-and-badges.qmd
reference/: GreatDocs.html  index.html  main.html
skills/great-docs/: SKILL.md
test-packages/: README.md  render_all.py  setup-test-packages.sh  test-integration.sh  test_manual.py
test-packages/synthetic/: __init__.py  catalog.py  generator.py  render_all.py
tests/: test_api_diff.py  test_api_snapshot.py  test_build_from_repo.py  test_build_log.py  test_cli.py  test_color_swatch.py  test_config.py  test_contrast.py  test_directives.py  test_gdg_rendered.py  test_git.py  test_great_docs.py  test_great_theme.py  test_harper.py  test_icon_shortcode.py  test_integration.py  test_keys_shortcode.py  test_license.py  test_link_checker.py  test_lint.py  test_nav_icons.py  test_page_status.py  test_post_render.py  test_quarto_check.py  test_readme_images.py  test_social_cards.py  test_spell_checker.py  test_synthetic.py  test_tags.py  test_tbl_display.py  test_tbl_explorer.py  test_tbl_preview.py  test_translations.py  test_versioned_build.py  test_versioning.py  test_versioning_e2e.py
tests/renderer/: test_classes.py  test_format.py  test_functions.py  test_mixin_call.py  test_typing.py
user_guide/: 00-introduction.qmd  01-installation.qmd  02-quickstart.qmd  03-authoring-qmd-files.qmd  03-configuration.qmd  04-api-documentation.qmd  04-configuration.qmd  04-writing-docstrings.qmd  05-api-documentation.qmd  05-cli-documentation.qmd  05-configuration.qmd  06-api-documentation.qmd  06-user-guides.qmd  07-cli-documentation.qmd  07-custom-sections.qmd  07-deployment.qmd  07-user-guides.qmd  08-blog.qmd  08-custom-sections.qmd  08-link-checker.qmd  08-user-guides.qmd  09-custom-sections.qmd  09-spell-checker.qmd  09-theming.qmd  10-blog.qmd  10-changelog.qmd  10-cross-referencing.qmd  11-building.qmd  11-cross-referencing.qmd  11-custom-sections.qmd  11-theming.qmd  12-cross-referencing.qmd  12-deployment.qmd  13-building.qmd  13-link-checker.qmd  14-deployment.qmd  14-link-checker.qmd  14-proofreading.qmd  14-spell-checker.qmd  15-changelog.qmd  (+44 more)
(+318 files in other folders)
