[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "great-docs"
version = "0.1.0"
description = "An easy-to-use documentation site generator for Python packages"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rich Iannone", email = "riannone@me.com"}
]
maintainers = [
    {name = "Rich Iannone", email = "riannone@me.com"}
]
keywords = ["documentation", "documentation-generator", "api-documentation", "quarto", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.11"
dependencies = [
    "quartodoc>=0.11.1",
    "jupyter>=1.1.1",
    "pyyaml>=5.4.0",
    "click>=8.0.0",
    "griffe>=0.35.0",
    "pygments>=2.0.0",
    "requests>=2.25.0",
    "pyspellchecker>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "ruff>=0.9.9",
    "mypy>=1.0.0",
    "pyright>=1.1.350",
    "build>=0.7",
    "twine>=3.4",
    "pyright>=1.1.407",
]
docs = [
    "quartodoc>=0.7.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rich-iannone/great-docs"
Repository = "https://github.com/rich-iannone/great-docs"
Documentation = "https://rich-iannone.github.io/great-docs/"
"Bug Tracker" = "https://github.com/rich-iannone/great-docs/issues"

[project.scripts]
great-docs = "great_docs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["great_docs*"]

[tool.setuptools.package-data]
great_docs = ["assets/*", "assets/.*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]

[tool.coverage.run]
source = ["great_docs"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
exclude = ["docs", ".venv", "tests/*", "build/*", "dist/*"]

# Select rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

ignore = [
    "E402",  # module level import not at top of file
    "E501",  # line too long (handled by formatter)
    "F811",  # redefinition of unused name
    "E203",  # whitespace before ':'
    "F841",  # local variable assigned but never used
    "E702",  # multiple statements on one line (semicolon)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["F401", "E402"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = [
   "great_docs/renderer/"
]

# These checks are not enabled on by "strict"
reportUnnecessaryTypeIgnoreComment = true
reportCallInDefaultInitializer = true
reportPropertyTypeMismatch = true
reportUnusedCallResult = true

# We need this because quartodoc is not fully type annotated
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "tests/",
    "docs/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "griffe.*",
    "quartodoc.*",
]
ignore_missing_imports = true

